# crewai_scm_recommender_system

./: .gitignore  README.md  crew_execution.log.txt  crewai_flow.html  pyproject.toml  supply_chain_recommendations.md
.github/instructions/: crewai-flows-guidelines.instructions.md  crewai-rules.instructions.md  crewai-tool.instructions.md  event-bus-guidelines.instructions.md  ruff-python-linting.instructions.md  uv-manager-guidelines.instructions.md
data/: supply_chain_dataset.csv  supply_chain_dataset.sqlite
src/crewai_scm_recommender_system/: main.py
src/crewai_scm_recommender_system/crews/recommender_crew/: __init__.py  crew.py  recommender_crew.py
src/crewai_scm_recommender_system/crews/recommender_crew/config/: agents.yaml  tasks.yaml
src/crewai_scm_recommender_system/tools/: database_query_tool.py  metric_calculator_tool.py  priority_tool.py
