[project]
name = "crewai_scm_recommender_system"
version = "0.1.0"
description = "crewai_scm_recommender_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0",
]

[project.scripts]
kickoff = "crewai_scm_recommender_system.main:kickoff"
run_crew = "crewai_scm_recommender_system.main:kickoff"
plot = "crewai_scm_recommender_system.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
